WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111520
DFG should not check if nodes are shouldGenerate prior to DCE
https://bugs.webkit.org/show_bug.cgi?id=111520
Summary
DFG should not check if nodes are shouldGenerate prior to DCE
Filip Pizlo
Reported
2013-03-05 21:38:02 PST
Everything is shouldGenerate prior to DCE, these days.
Attachments
the patch
(17.61 KB, patch)
2013-03-05 23:54 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-03-05 23:54:09 PST
Created
attachment 191661
[details]
the patch
Geoffrey Garen
Comment 2
2013-03-06 08:28:25 PST
Comment on
attachment 191661
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-03-06 09:43:56 PST
Landed in
http://trac.webkit.org/changeset/144939
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug